crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__lists_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



글머리표

1

2

3

글머리표 두 번째

1

2

3

문단번호

1

2

2-1

3

3-1

3-2

3-2-1

3-2-2

3-2-3

4

문단번호 두 번째 (번호 이어짐)

5

5-1

문단번호 세 번째 (새 번호)

1

2

2-1

3

3-1

3-2

3-2-1

3-2-2

3-2-3

4

---



개요

1

2

# 2-1

3

# 3-1

# 3-2

## 3-2-1

## 3-2-2

## 3-2-3

4

개요 두 번째 (번호 이어짐)

5

# 5-1

개요 세 번째 (새 번호)

---



1

2

# 2-1

3

# 3-1

# 3-2

## 3-2-1

## 3-2-2

## 3-2-3

4
