crates/hwp-core/src/snapshots/hwp_core__snapshot_tests__pagedefs_markdown.snap
---
source: crates/hwp-core/src/lib.rs
expression: markdown
---
# HWP 문서



**버전**: 5.00.01.07



Section 1: A4 portrait

---



Section 2: A4 landscape
